tests/neg-custom-args/captures/indirect-avoid.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:16:4 --------------------------------
16 |    nll // error
   |    ^^^
   |    Found:    Test.LL^{nll}
   |    Required: Test.LL^{ll}
   |
   |    Note that capability `nll` cannot flow into capture set {ll}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:26:14 -------------------------------
26 |  val _: LL = x1 // error
   |              ^^
   |Found:    (Test.x1 : Test.LL^{any.rd})
   |Required: Test.LL
   |
   |Note that capability `any.rd` cannot flow into capture set {}.
   |
   |where:    any is a root capability created in value x1 when instantiating method filterImpl1's type (ll: Test.LL^): Test.LL^{fresh.rd, ll}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:32:4 --------------------------------
32 |    nll // error
   |    ^^^
   |    Found:    Test.LL^{nll}
   |    Required: Test.LL^{ll}
   |
   |    Note that capability `nll` cannot flow into capture set {ll}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/indirect-avoid.scala:24:8 -----------------------------------------------------
24 |  val x1 = filterImpl1(LL()) // error
   |        ^
   |value x1 needs an explicit type because it captures a root capability in its type Test.LL^{any.rd}.
   |Fields capturing a root capability need to be given an explicit type unless the capability is already
   |subsumed by the computed capability of the enclosing class.
   |
   |where:    any is a root capability created in value x1 when instantiating method filterImpl1's type (ll: Test.LL^): Test.LL^{fresh.rd, ll}
